manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  tls:
    - hosts:
        - frontend.app
      secretName: test
  ingressClassName: nginx
  rules:
  - host: frontend.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
             number: 3000
      - path: /time*
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
             number: 5000
